This isn't even my final form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Springboard</title>
+    <title>Springbutt</title>
     <meta name="description" content="Download free Bootstrap 4 multipurpose template Comply."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--Bootstrap 4-->
@@ -19,7 +19,7 @@
             aria-label="Toggle navigation">
         <span class="ion-grid icon-sm"></span>
     </button>
-    <a class="navbar-brand hero-heading" href="#">Springboard</a>
+    <a class="navbar-brand hero-heading" href="#">Springbutt</a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mr-3">
@@ -52,12 +52,12 @@
                 <img class="img-fluid mx-auto d-block" src="img/product.png"/>
             </div>
             <div class="col-md-6 col-sm-12 text-white wow fadeIn">
-                <h2 class="pt-4">Experience <b class="text-primary-light">Spring Boot</b> With Springboard Project</h2>
+                <h2 class="pt-4">Experience <b class="text-primary-light">Spring Boot</b> With Springbutt Project</h2>
                 <p class="mt-5">
                     Production ready boilerplate for Spring Boot based web applications!
                 </p>
                 <p class="mt-5">
-                    <a href="https://github.com/SystangoTechnologies/Springboard"
+                    <a href="https://github.com/SystangoTechnologies/Springbutt"
                        class="btn btn-white mb-2 page-scroll">Get Started</a>
                 </p>
             </div>
@@ -72,7 +72,7 @@
             <div class="col-md-6 col-sm-8 mx-auto text-center wow fadeIn">
                 <h2 class="text-primary">Amazing Features</h2>
                 <p class="lead mt-4">
-                    Springboard comes with plenty of awesome features to <br/>wow the JAVA developers.
+                    Springbutt comes with plenty of awesome features to <br/>wow the JAVA developers.
                 </p>
             </div>
         </div>
@@ -185,7 +185,7 @@
                     <li>Aenean commodo ligula eget dolor.</li>
                     <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
                 </ul>
-                <a href="#purchase" class="btn btn-primary mr-2 page-scroll">Get Started with Springboard</a>
+                <a href="#purchase" class="btn btn-primary mr-2 page-scroll">Get Started with Springbutt</a>
             </div>
         </div>
     </div>
@@ -206,12 +206,12 @@
             <div class="team col-sm-3 mt-2 wow fadeInLeft">
                 <img src="img/team-4.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
                 <h5>Vinita Rathi</h5>
-                <p>CEO, Springboard:Systango</p>
+                <p>CEO, Springbutt:Systango</p>
             </div>
             <div class="team col-sm-3 mt-2 wow fadeIn">
                 <img src="img/team-1.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
                 <h5>Arpit Khandelwal</h5>
-                <p>CTO, Springboard:Systango</p>
+                <p>CTO, Springbutt:Systango</p>
             </div>
             <div class="team col-sm-3 mt-2 wow fadeIn">
                 <img src="img/team-2.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
@@ -234,7 +234,7 @@
             <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 col-xs-12 text-center">
                 <h2 class="text-primary">From Our Blog</h2>
                 <p class="lead pt-3">
-                    The latest news from Springboard blog.
+                    The latest news from Springbutt blog.
                 </p>
             </div>
         </div>
@@ -248,7 +248,7 @@
                             <em class="ion-ios-person-outline"></em> Arpit Khandelwal &nbsp;&nbsp;
                             <em class="ion-ios-time-outline"></em> 5min read
                         </p>
-                        <h5 class="card-title"><a href="#">Springboard version 1.0 is available now.</a></h5>
+                        <h5 class="card-title"><a href="#">Springbutt version 1.0 is available now.</a></h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor
                             sit amet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit
                             amet.</p>
@@ -337,7 +337,7 @@
                             class="ion-social-googleplus text-google-alt icon-sm mr-3"></em></a>
                 </p>
                 <p class="pt-2 text-muted">
-                    &copy; 2017 Springboard. Production grade Spring Boot boilerplate by
+                    &copy; 2017 Springbutt. Production grade Spring Boot boilerplate by
                     <a href="http://www.systango.com/">Systango Technologies</a>. Developed by <a
                         href="https://www.linkedin.com/in/arpitkhandelwal1984/">Arpit Khandelwal</a>
                 </p>
